# opal_msgs

./: .gitignore  CMakeLists.txt  README.md  package.xml
msg/: OpalAction.msg  OpalCommand.msg  OpalMetrics.msg  OpalScene.msg  OpalSpeechResult.msg  OpalStorybook.msg  SceneObject.msg  iSpyAction.msg
