<?xml version="1.0"?>
<package>
  <name>sar_opal_msgs</name>
  <version>4.0.0</version>
  <description>SAR Opal project messages for Unity tablet game and ROS communication</description>

  <maintainer email="jakory@media.mit.edu">jakory</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/personal-robots/sar-opal-msgs</url>
  <author email="jakory@media.mit.edu">jakory</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
